kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: zurek
  name: zurek
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
