kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: zurek
  name: backend
spec:
  serviceName: backend
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: backend
          ports:
            - containerPort: 3000
          # volumeMounts:
          #   - mountPath: /app
          #     name: backend
          # lifecycle:
          #   postStart:
          #     exec:
          #       command:
          #         - /bin/bash
          #         - -c
          #         - ./env.sh
          resources:
            limits:
              cpu: 2500m
              memory: 4Gi
            requests:
              cpu: 2000m
              memory: 2Gi
          stdin: true
      serviceAccountName: backend
      securityContext:
        runAsUser: 0
      hostname: backend.zurek
      # volumes:
      #   - name: backend
      #     persistentVolumeClaim:
      #       claimName: backend
