kubernetes/deployment-minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: zurek
  name: minio
spec:
  serviceName: minio
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2022-01-08T03-11-54Z
          volumeMounts:
            - name: minio
              mountPath: /data
              subPath: minio-x.x.x-data
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          stdin: true
      serviceAccountName: minio
      volumes:
        - name: minio
          persistentVolumeClaim:
            claimName: minio
