kubernetes/deployment-pgadmin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: zurek
  name: pgadmin
spec:
  serviceName: pgadmin
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      # terminationGracePeriodSeconds: 10
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin
              mountPath: /var/lib/pgadmin
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 5050
          #   initialDelaySeconds: 60
          #   periodSeconds: 15
          #   successThreshold: 1
          #   timeoutSeconds: 15
          #   failureThreshold: 5
      serviceAccountName: pgadmin
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin
