kubernetes/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zurek
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql/data
              subPath: postgres-12.x.x-var-lib-postgresql-data
          resources:
            limits:
              cpu: 125m
              memory: 2Gi
            requests:
              cpu: 62m
              memory: 1Gi
          stdin: true
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
