kubernetes/deployment-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: zurek
  name: redis
spec:
  serviceName: redis
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:5-alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6379
        args: ["--requirepass", "$(REDIS_PASSWORD)"]
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 1Gi
        stdin: true
      serviceAccountName: redis
      securityContext:
        runAsUser: 999
