kubernetes/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: zurek
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: default-server-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          # - path: /v1
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend
          #       port:
          #         number: 3000
